--- a/upload/index.html
+++ b/upload/index.html
@@ -18,7 +18,7 @@
 		<script src="js/jquery.scrollTo-1.4.3.1.min.js"></script>
 		<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
 		<script type="text/javascript" src="js/forms.js"></script>
-		<script src="js/touchTouch.jquery.js"></script>
+		<!-- <script src="js/touchTouch.jquery.js"></script> -->
 		<script src="js/jquery.tweet.js"></script>
 		<script src="js/script.js"></script>
 		<script type="text/javascript" src="js/fancybox/jquery.fancybox.js?v=2.1.5"></script>
