Removed several unused assets and created pages for Swipe ToDo and Quick Doodle

--- a/upload/Resume.html
+++ b/upload/Resume.html
@@ -89,7 +89,7 @@ $('.sf-menu').onePageNav({
 								<a href="/">Home</a>
 							</li>
 							<li>
-								<a href="/Resume.pdf">PDF Format</a>
+								<a target="_blank" href="/Resume.pdf">PDF Format</a>
 							</li>
 						</ul>
 						<div class="clear"></div>
