--- a/upload/index.html
+++ b/upload/index.html
@@ -191,6 +191,30 @@
 							</div>
 							<div class="clear"></div>
 						</div>
+					<!-- Second row -->
+						<div class="port_box">
+							<div class="port_col">
+								<a href="QuickDoodle.html" class="fancybox fancybox.iframe" style="text-decoration:none"> <img src="images/portfolio4.png" alt=""> </a>
+								<div>
+									Quick Doodle
+								</div>
+							</div>
+							<div class="port_col">
+								<a href="SwipeToDo.html" class="fancybox fancybox.iframe" style="text-decoration:none"> <img src="images/portfolio5.png" alt=""> </a>
+								<div>
+									Swipe ToDo
+								</div>
+							</div>
+							<!--
+<div class="port_col">
+								<a href="AstroBlast.html" class="fancybox fancybox.iframe" style="text-decoration:none"> <img src="images/portfolio1.png" alt=""> </a>
+								<div>
+									AstroBlast Invasion
+								</div>
+							</div>
+-->
+							<div class="clear"></div>
+						</div>
 						<!--
 <div class="port_box">
 							<div class="port_col">
