updated several seperate app pages, updated resume and changed bio

--- a/upload/MyBrewLog.html
+++ b/upload/MyBrewLog.html
@@ -2,10 +2,11 @@
 <html lang="en">
 	<head>
 		<title>My Brew Log</title>
+		<meta name="robots" content="noarchive">
 		<!-- <link rel="stylesheet" type="text/css" media="screen" href="css/style.css"> -->
 		<link rel="stylesheet" type="text/css" media="screen" href="css/overlay.css">
 		<link rel="stylesheet" type="text/css" media="screen" href="css/flexslider.css">
-		<script src="js/touchTouch.jquery.js"></script>
+		<!-- <script src="js/touchTouch.jquery.js"></script> -->
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/jquery.flexslider.js"></script>
 		<script type="text/javascript">
