--- a/upload/Resume.html
+++ b/upload/Resume.html
@@ -151,6 +151,9 @@ $('.sf-menu').onePageNav({
 											Built one iOS game with Objective-C and SpriteKit with Game Center integration, and released to the App Store. <i>AstorBlast Invasion</i> can be found at <a target="_blank" href="http://itunes.apple.com/us/app/astroblast-invasion/id1018098075">http://itunes.apple.com/us/app/astroblast-invasion/id1018098075</a>
 										</li>
 										<li>
+											o	Built a drawing application written in Swift using UIKit. <i>Quick Doodle</i> can be found at <a target="_blank" href="http://itunes.apple.com/us/app/quick-doodle/id1069691400">http://itunes.apple.com/us/app/quick-doodle/id1069691400</a>
+										</li>
+										<li>
 											Highly modified website template/theme using HTML5/CSS3/Javascript/JQuery to launch own website, ElijahFreestone.com
 										</li>
 										<li>
@@ -158,9 +161,6 @@ $('.sf-menu').onePageNav({
 										</li>
 										<li>
 											Two additional iOS games are in various stages of development. One in Objective-C and the other in Swift
-										</li>
-										<li>
-											A drawing application written in Swift using UIKit is nearing completion and will be submitted to the Apple App Store very shortly.
 										</li>
 										<li>
 											A gesture based to-do list application called Swipe ToDo is also in development, using Swift 2.1. All interactions with the application are gesture based such as swipe right to mark completed, swipe left and hold to delete, etc
