--- a/upload/index.html
+++ b/upload/index.html
@@ -143,7 +143,7 @@
 								</div>
 								<div class="about_text"> 
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-									Born and raised in the Northern Front Range (Fort Collins) area of Colorado, Elijah currently resides in Loveland. He earned a Bachelors of Science Degree in Mobile Development from Full Sail University in May 2015. The degree program covered web and hybrid apps, iOS and Android development from start to finish. This also includes design, UX/UI and documentation for the applications. Elijah currently has one application on the Apple App Store titled <i>AstroBlast Invasion</i>. It’s a space shooter game built with Sprite Kit and Objective-C with Game Center integration. Several other applications are in the works, most of which started life as projects at Full Sail. Elijah specializes in iOS development using Objective-C and Swift, however he is also knowledgeable and experienced in developing Android apps using Java and web-apps using HTML5, CSS3 and Javascript/JQuery/JQuery Mobile. Various Application Program Interfaces (APIs) and web services have also been utilized for different projects. These include APIs from Rotten Tomatoes, Weather Underground, Facebook and Twitter, among others. Database and web services include CouchDB, Cloudant and Parse (an MBaaS).
+									Born and raised in the Northern Front Range (Fort Collins) area of Colorado, Elijah currently resides in Loveland. He earned a Bachelors of Science Degree in Mobile Development from Full Sail University in May 2015. The degree program covered web and hybrid apps, iOS and Android development from start to finish. This also includes design, UX/UI and documentation for the applications. Elijah currently has two applications on the Apple App Store. The first titled <i>AstroBlast Invasion</i>. It’s a space shooter game built with Sprite Kit and Objective-C with Game Center integration. The second is a drawing application called <i>Quick Doodle</i> and was built with Swift and UIKit. Several other applications are in the works, most of which started life as projects at Full Sail. Elijah specializes in iOS development using Objective-C and Swift, however he is also knowledgeable and experienced in developing Android apps using Java and web-apps using HTML5, CSS3 and Javascript/JQuery/JQuery Mobile. Various Application Program Interfaces (APIs) and web services have also been utilized for different projects. These include APIs from Rotten Tomatoes, Weather Underground, Facebook and Twitter, among others. Database and web services include CouchDB, Cloudant and Parse (an MBaaS).
 								</br></br>
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 									When not developing mobile apps and games, Elijah has a fairly broad set of interests. He greatly enjoys and is very passionate about all things music; playing, listening to/watching, instruments (esp. guitar) and all the related gear. Other hobbies include cars, playing video games and watching various extreme sports such as snowboarding and freestyle BMX. Elijah is also very interested in electronics and has been building/repairing computers and various devices since childhood. Other interests include science and the outdoors.
@@ -178,15 +178,15 @@
 								</div>
 							</div>
 							<div class="port_col">
-								<a href="MyBrewLog.html" class="fancybox fancybox.iframe" style="text-decoration:none"> <img src="images/portfolio2.png" alt=""> </a>
+								<a href="QuickDoodle.html" class="fancybox fancybox.iframe" style="text-decoration:none"> <img src="images/portfolio4.png" alt=""> </a>
 								<div>
-									My Brew Log (coming soon)
+									Quick Doodle
 								</div>
 							</div>
 							<div class="port_col">
-								<a href="CuBallDrop.html" class="fancybox fancybox.iframe" style="text-decoration:none"> <img src="images/portfolio3.png" alt=""> </a>
+								<a href="MyBrewLog.html" class="fancybox fancybox.iframe" style="text-decoration:none"> <img src="images/portfolio2.png" alt=""> </a>
 								<div>
-									CuBall Drop (coming soon)
+									My Brew Log (coming soon)
 								</div>
 							</div>
 							<div class="clear"></div>
@@ -194,15 +194,15 @@
 					<!-- Second row -->
 						<div class="port_box">
 							<div class="port_col">
-								<a href="QuickDoodle.html" class="fancybox fancybox.iframe" style="text-decoration:none"> <img src="images/portfolio4.png" alt=""> </a>
+								<a href="CuBallDrop.html" class="fancybox fancybox.iframe" style="text-decoration:none"> <img src="images/portfolio3.png" alt=""> </a>
 								<div>
-									Quick Doodle
+									CuBall Drop (coming soon)
 								</div>
 							</div>
 							<div class="port_col">
 								<a href="SwipeToDo.html" class="fancybox fancybox.iframe" style="text-decoration:none"> <img src="images/portfolio5.png" alt=""> </a>
 								<div>
-									Swipe ToDo
+									Swipe ToDo (coming soon)
 								</div>
 							</div>
 							<!--
