--- a/upload/QuickDoodle.html
+++ b/upload/QuickDoodle.html
@@ -2,10 +2,11 @@
 <html lang="en">
 	<head>
 		<title>Quick Doodle</title>
+		<meta name="robots" content="noarchive">
 		<!-- <link rel="stylesheet" type="text/css" media="screen" href="css/style.css"> -->
 		<link rel="stylesheet" type="text/css" media="screen" href="css/overlay.css">
 		<link rel="stylesheet" type="text/css" media="screen" href="css/flexslider.css">
-		<script src="js/touchTouch.jquery.js"></script>
+		<!-- <script src="js/touchTouch.jquery.js"></script> -->
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/jquery.flexslider.js"></script>
 		<script type="text/javascript">
@@ -23,48 +24,39 @@
 	</p>
 	
 	<div class="titleDiv">
-		<h2 class="title">Quick Doodle (coming soon)</h2> 
-		<p><strong> A simple and straight forward drawing app</strong></p>
+		<h2 class="title">Quick Doodle</h2> 
+		<p><strong>A simple and straight forward drawing app</strong></p>
 	</div>
 	
-	<p>My Brew Log is set to revolutionize the way home brewers keep track of their brews, no matter what it is they are making. The open format for creating recipes allows the user to easily track different products with as much or little detail as needed. It’s only a matter of time before My Brew Log is a must have application for home brewers everywhere to track their recipes.
+	<p>Quick Doodle is a simple and straightforward drawing app. Not a lot of settings or brushes to fiddle with and get caught up in. Simply select from a handful of colors and start doodling. Brush size and opacity are available in Settings, as well as RGB (red, green, blue) sliders to create custom colors. Artwork can be shared via Twitter and/or Facebook, or saved to your device.
 	</p>
 	
-	<p>Brewing beer and wine at home can be a fun and rewarding process. You get to experiment with various little details that can have a huge impact on the end result. Some experiments don’t work so well and can be forgotten while others work out pretty good. Just a little tweak and it could be great. You need to be able to recreate the recipe before you can try any modifications though. Did you write down all the ingredients? How about notes on when each part took place or the total time? Each of these plays a part in making the end product so you need good notes. You need a recipe to work from in order to recreate it or make it better.
-	</p>
-	
-	<p>My Brew Log will allow you to save your recipes and notes so you can create that brew again. Easily edit or create a new version as you experiment. Keep track of what adjustments you’ve tried and how they turned out. Have a recipe you really love? Share it with the world. Browse user recipes and give them a try.
+	<p>What are you waiting for? It’s time to start doodling with Quick Doodle!	
 	</p>
 	
 	<div class="appstore">
+		<a href="https://itunes.apple.com/us/app/quick-doodle/id1069691400?ls=1&mt=8" target="_blank"> <img src="images/AppStoreBadge.png" alt=""> </a>
 		<!-- 
-<a href="https://itunes.apple.com/us/app/astroblast-invasion/id1018098075?ls=1&mt=8" target="_blank"> <img src="images/AppStoreBadge.png" alt=""> </a> -->
-		<a class="buttonGap" href="#"></a>
-		<!-- <a href="https://itunes.apple.com/us/app/astroblast-invasion/id1018098075?ls=1&mt=8" target="_blank"> <img src="images/AppStoreBadge.png" alt=""> </a>
- -->
-
+<a class="buttonGap" href="#"></a>
+		<a href="https://itunes.apple.com/us/app/astroblast-invasion/id1018098075?ls=1&mt=8" target="_blank"> <img src="images/AppStoreBadge.png" alt=""> </a>
+		-->
 	</div>
 	
-	<!-- 
-<div class="flexslider">
+	<div class="flexslider">
   		<ul class="slides">
     		<li>
-      			<img src="images/astroblast1.png"/>
+      			<img src="images/QuickDoodle1.png"/>
     		</li>
     		<li>
-      			<img src="images/astroblast2.png"/>
+      			<img src="images/QuickDoodle2.png"/>
     		</li>
     		<li>
-      			<img src="images/astroblast3.png"/>
+      			<img src="images/QuickDoodle3.png"/>
     		</li>
     		<li>
-      			<img src="images/astroblast4.png"/>
-    		</li>
-    		<li>
-      			<img src="images/astroblast5.png"/>
+      			<img src="images/QuickDoodle4.png"/>
     		</li>
   		</ul>
 	</div>
- -->
 	
 </html>
