--- a/upload/SwipeToDo.html
+++ b/upload/SwipeToDo.html
@@ -5,7 +5,7 @@
 		<!-- <link rel="stylesheet" type="text/css" media="screen" href="css/style.css"> -->
 		<link rel="stylesheet" type="text/css" media="screen" href="css/overlay.css">
 		<link rel="stylesheet" type="text/css" media="screen" href="css/flexslider.css">
-		<script src="js/touchTouch.jquery.js"></script>
+		<!-- <script src="js/touchTouch.jquery.js"></script> -->
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/jquery.flexslider.js"></script>
 		<script type="text/javascript">
