Tweaking some responsive stuff with the banner

--- a/upload/Resume.html
+++ b/upload/Resume.html
@@ -151,7 +151,7 @@ $('.sf-menu').onePageNav({
 											Built one iOS game with Objective-C and SpriteKit with Game Center integration, and released to the App Store. <i>AstorBlast Invasion</i> can be found at <a target="_blank" href="http://itunes.apple.com/us/app/astroblast-invasion/id1018098075">http://itunes.apple.com/us/app/astroblast-invasion/id1018098075</a>
 										</li>
 										<li>
-											o	Built a drawing application written in Swift using UIKit. <i>Quick Doodle</i> can be found at <a target="_blank" href="http://itunes.apple.com/us/app/quick-doodle/id1069691400">http://itunes.apple.com/us/app/quick-doodle/id1069691400</a>
+											Built a drawing application written in Swift using UIKit. <i>Quick Doodle</i> can be found at <a target="_blank" href="http://itunes.apple.com/us/app/quick-doodle/id1069691400">http://itunes.apple.com/us/app/quick-doodle/id1069691400</a>
 										</li>
 										<li>
 											Highly modified website template/theme using HTML5/CSS3/Javascript/JQuery to launch own website, ElijahFreestone.com
