--- a/upload/index.html
+++ b/upload/index.html
@@ -6,8 +6,6 @@
 		<meta name="robots" content="noarchive">
 		<meta name="description" content="Website for the Mobile Developer Elijah Freestone">
 		
-		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
-		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="js/fancybox/jquery.fancybox.css?v=2.1.5" media="screen" />
 		<script type="text/javascript" src="js/jquery.js"></script>
@@ -257,7 +255,7 @@
 										<strong>Contact Information</strong>
 									</p>
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-									Thank you for visiting! Elijah can be reached at <strong>Elijah(at)ElijahFreestone(dot)com</strong> or or via the contact form on this site and he will get back to you as soon as possible. </br>
+									Thank you for visiting! Elijah can be reached at <strong>Elijah(at)ElijahFreestone(dot)com</strong> or via the contact form on this site and he will get back to you as soon as possible. </br>
 									
 								</div>
 							</div>
