Updating some app pages to link with their github repos

--- a/upload/QuickDoodle.html
+++ b/upload/QuickDoodle.html
@@ -35,11 +35,13 @@
 	</p>
 	
 	<div class="appstore">
-		<a href="https://itunes.apple.com/us/app/quick-doodle/id1069691400?ls=1&mt=8" target="_blank"> <img src="images/AppStoreBadge.png" alt=""> </a>
-		<!-- 
-<a class="buttonGap" href="#"></a>
-		<a href="https://itunes.apple.com/us/app/astroblast-invasion/id1018098075?ls=1&mt=8" target="_blank"> <img src="images/AppStoreBadge.png" alt=""> </a>
-		-->
+		<a href="https://itunes.apple.com/us/app/quick-doodle/id1069691400?ls=1&mt=8" target="_blank" class="appStoreButton"> 
+			<img src="images/AppStoreBadge.png" alt=""> 
+		</a>
+		
+		<a class="buttonGap" href="#"></a>
+		<a href="https://github.com/efreestone/QuickDoodle" target="_blank"> <img src="images/GitHub_Logo.png" alt=""> </a>
+		
 	</div>
 	
 	<div class="flexslider">
