--- a/upload/AstroBlast.html
+++ b/upload/AstroBlast.html
@@ -33,11 +33,13 @@
 	</p>
 	
 	<div class="appstore">
-		<a href="https://itunes.apple.com/us/app/astroblast-invasion/id1018098075?ls=1&mt=8" target="_blank"> <img src="images/AppStoreBadge.png" alt=""> </a>
-		<!-- 
-<a class="buttonGap" href="#"></a>
-		<a href="https://itunes.apple.com/us/app/astroblast-invasion/id1018098075?ls=1&mt=8" target="_blank"> <img src="images/AppStoreBadge.png" alt=""> </a>
-		-->
+		<a href="https://itunes.apple.com/us/app/astroblast-invasion/id1018098075?ls=1&mt=8" target="_blank" class="appStoreButton"> 
+			<img src="images/AppStoreBadge.png" alt=""> 
+		</a>
+		
+		<a class="buttonGap" href="#"></a>
+		<a href="https://github.com/efreestone/AstroBlast-Invasion" target="_blank"> <img src="images/GitHub_Logo.png" alt=""> </a>
+		
 	</div>
 	
 	<div class="flexslider">
