--- a/upload/MyBrewLog.html
+++ b/upload/MyBrewLog.html
@@ -43,29 +43,25 @@
 		<a class="buttonGap" href="#"></a>
 		<!-- <a href="https://itunes.apple.com/us/app/astroblast-invasion/id1018098075?ls=1&mt=8" target="_blank"> <img src="images/AppStoreBadge.png" alt=""> </a>
  -->
+ 
+ 	<a class="buttonGap" href="#"></a>
+		<a href="https://github.com/efreestone/MyBrewLog" target="_blank"> <img src="images/GitHub_Logo.png" alt=""> 
+	</a>
 
 	</div>
 	
-	<!-- 
-<div class="flexslider">
+	<div class="flexslider">
   		<ul class="slides">
     		<li>
-      			<img src="images/astroblast1.png"/>
+      			<img src="images/MyBrewLog1.png"/>
     		</li>
     		<li>
-      			<img src="images/astroblast2.png"/>
+      			<img src="images/MyBrewLog2.png"/>
     		</li>
     		<li>
-      			<img src="images/astroblast3.png"/>
-    		</li>
-    		<li>
-      			<img src="images/astroblast4.png"/>
-    		</li>
-    		<li>
-      			<img src="images/astroblast5.png"/>
+      			<img src="images/MyBrewLog3.png"/>
     		</li>
   		</ul>
 	</div>
- -->
 	
 </html>
