--- a/upload/SwipeToDo.html
+++ b/upload/SwipeToDo.html
@@ -36,11 +36,14 @@
 		<a class="buttonGap" href="#"></a>
 		<!-- <a href="https://itunes.apple.com/us/app/astroblast-invasion/id1018098075?ls=1&mt=8" target="_blank"> <img src="images/AppStoreBadge.png" alt=""> </a>
  -->
+ 
+ 	<a class="buttonGap" href="#"></a>
+		<a href="https://github.com/efreestone/AstroBlast-Invasion" target="_blank"> <img src="images/GitHub_Logo.png" alt=""> 
+	</a>
 
 	</div>
 	
-	<!-- 
-<div class="flexslider">
+	<div class="flexslider">
   		<ul class="slides">
     		<li>
       			<img src="images/astroblast1.png"/>
@@ -59,6 +62,5 @@
     		</li>
   		</ul>
 	</div>
- -->
 	
 </html>
