Added swipe todo screenshots and updated its page

--- a/upload/SwipeToDo.html
+++ b/upload/SwipeToDo.html
@@ -38,7 +38,7 @@
  -->
  
  	<a class="buttonGap" href="#"></a>
-		<a href="https://github.com/efreestone/AstroBlast-Invasion" target="_blank"> <img src="images/GitHub_Logo.png" alt=""> 
+		<a href="https://github.com/efreestone/SwipeToDo" target="_blank"> <img src="images/GitHub_Logo.png" alt=""> 
 	</a>
 
 	</div>
@@ -46,19 +46,16 @@
 	<div class="flexslider">
   		<ul class="slides">
     		<li>
-      			<img src="images/astroblast1.png"/>
+      			<img src="images/SwipeToDo1.png"/>
     		</li>
     		<li>
-      			<img src="images/astroblast2.png"/>
+      			<img src="images/SwipeToDo2.png"/>
     		</li>
     		<li>
-      			<img src="images/astroblast3.png"/>
+      			<img src="images/SwipeToDo3.png"/>
     		</li>
     		<li>
-      			<img src="images/astroblast4.png"/>
-    		</li>
-    		<li>
-      			<img src="images/astroblast5.png"/>
+      			<img src="images/SwipeToDo4.png"/>
     		</li>
   		</ul>
 	</div>
