--- a/upload/SwipeToDo.html
+++ b/upload/SwipeToDo.html
@@ -27,7 +27,7 @@
 		<p><strong>A Gesture based todo list</strong></p>
 	</div>
 	
-	<p>Swipe ToDo is a gesture based to-do list application. Some gestures include swipe left to mark item completed, swipe right and hold to delete, pinch to edit, long hold to move in order, etc. The app is being built in Swift, and will be available shortly.
+	<p>Swipe ToDo is a gesture based to-do list application. Some gestures include swipe right to mark item completed, swipe left to delete, tap to edit, long hold to move in order, etc. The app is being built in Swift, and will be available shortly.
 	</p>
 	
 	<div class="appstore">
