Added fallback fonts to fix encoding in Chrome, updated resume, other tweaks

--- a/upload/Resume.html
+++ b/upload/Resume.html
@@ -165,7 +165,7 @@ $('.sf-menu').onePageNav({
 											Built a drawing application written in Swift using UIKit. <i>Quick Doodle</i> can be found at <a target="_blank" href="http://itunes.apple.com/us/app/quick-doodle/id1069691400">http://itunes.apple.com/us/app/quick-doodle/id1069691400</a>
 										</li>
 										<li>
-											Highly modified website template/theme using HTML5/CSS3/Javascript/JQuery to launch own website, ElijahFreestone.com
+											Built and launched own website using HTML5/CSS3/Javascript/JQuery (from template), ElijahFreestone.com
 										</li>
 										<li>
 											Currently finishing development on an open format Beer/Wine Recipe app called My Brew Log using Objective-C and Parse backend. App includes note taking and timer functionality. An Android version will also be built in the future
@@ -174,7 +174,7 @@ $('.sf-menu').onePageNav({
 											Two additional iOS games are in various stages of development. One in Objective-C and the other in Swift
 										</li>
 										<li>
-											A gesture based to-do list application called Swipe ToDo is also in development, using Swift 2.1. All interactions with the application are gesture based such as swipe right to mark completed, swipe left and hold to delete, etc
+											A gesture based to-do list application called Swipe ToDo is also in development, using Swift. All interactions with the application are gesture based such as swipe right to mark completed, swipe left to delete, etc
 										</li>
 									</ul>
 									
@@ -364,7 +364,7 @@ $('.sf-menu').onePageNav({
 		
 		<footer>
 			<div class="main">
-				Copyright 2015 - Elijah Freestone
+				Copyright 2016 - Elijah Freestone
 			</div>
 		</footer>
 	</body>
