updated email on contact form

--- a/upload/index.html
+++ b/upload/index.html
@@ -280,7 +280,7 @@
 										<strong>Contact Information</strong>
 									</p>
 									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-									Thank you for visiting! Elijah can be reached at <strong>Elijah(at)ElijahFreestone(dot)com</strong> or via the contact form on this site and he will get back to you as soon as possible. </br>
+									Thank you for visiting! Elijah can be reached at <strong>Hello(at)ElijahFreestone(dot)com</strong> or via the contact form on this site and he will get back to you as soon as possible. </br>
 
 								</div>
 							</div>
